jakis tam commit
